# columbo-root-cause-explorer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo_ui.py  docker-compose.yml  evaluate_scenario.py  pyproject.toml
.github/: copilot-instructions.md
columbo/: cli.py  debug_loop.py  evaluation_metrics.py  main.py  main_interactive.py  modules.py  probes.py  schemas.py  session_utils.py  tracing.py  ui.py
columbo/probes/: __init__.py  config_probes.py  container_probes.py  network_probes.py  registry.py  runtime.py  spec.py  utils.py  volume_probes.py
debugging_assistant/: debug_loop.py  main.py  modules.py  probes.py  schemas.py  session_utils.py  test_probes.py
docs/: ARCHITECTURE.md  columbo-demo-x6-light.mov  evaluation.md
evaluation/: README.md  __init__.py  evaluate_scenario.py  metrics.py
rag_agent/: Dockerfile  app.py
rag_agent/config/: environment.yml
scenarios/: README.md
scenarios/common/: docker_compose_utils.py  runner.py
scenarios/s001_env_override/: .env  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  manifest.json
scenarios/s001_env_override/config/: environment.yml
scenarios/s002_image_not_rebuilt/: .env  Dockerfile  README.md  app.py  docker-compose.yml  manifest.json
scenarios/s003_stale_volume/: Dockerfile  README.md  app.py  docker-compose.yml  manifest.json  seed_volume.sh  setup.sh
scenarios/s004_port_blocker/: Dockerfile  README.md  app.py  docker-compose.yml  manifest.json  setup.sh
scenarios/s005_permission_denied/: README.md  docker-compose.yml  manifest.json  setup.sh
scenarios/s005_permission_denied/worker/: Dockerfile  app.py
tests/: __init__.py  conftest.py  test_probes.py  test_session_utils.py
