[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "columbo"
version = "0.1.0"
description = "Columbo is a debugging assistant specialized in local container based architectures (for the moment)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
requests = "*"
python-dotenv = "*"
scikit-learn = "*"
numpy = "*"
pydantic = "^2.12.5"
docker = "^7.1.0"
dspy = "*"
rich = "^13.7.0"
